# Arcanum

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yaml
source/Arcanum/: main.cpp
source/Arcanum/Common/: PathNormalizer.cpp  PathNormalizer.hpp
source/Arcanum/Formats/: Art.cpp  Art.hpp  DataFile.cpp  DataFile.hpp
source/Arcanum/Game/: Application.cpp  Application.hpp  Settings.cpp  Settings.hpp
source/Arcanum/Graphics/: Canvas.cpp  Canvas.hpp  Image.cpp  Image.hpp  Render.cpp  Render.hpp  Sprite.cpp  Sprite.hpp  Window.cpp  Window.hpp
source/Arcanum/Loaders/: ArtLoader.cpp  ArtLoader.hpp  DatLoader.cpp  DatLoader.hpp  FileLoader.cpp  FileLoader.hpp
source/Arcanum/Managers/: FileManager.cpp  FileManager.hpp  ObjectManager.cpp  ObjectManager.hpp  SpriteManager.cpp  SpriteManager.hpp
source/Arcanum/Math/: Isometric.cpp  Isometric.hpp  Point.cpp  Point.hpp
source/Arcanum/Objects/: Map.cpp  Map.hpp  MapData.cpp  MapData.hpp  Scenery.cpp  Scenery.hpp  Tile.cpp  Tile.hpp
source/Arcanum/Readers/: DatReader.cpp  DatReader.hpp  FileReader.cpp  FileReader.hpp
source/Arcanum/UI/: MainMenu.cpp  MainMenu.hpp
source/Arcanum/Widgets/: Button.cpp  Button.hpp  Container.cpp  Container.hpp  Form.cpp  Form.hpp  Widget.cpp  Widget.hpp
source/Engine/Common/: PathNormalizer.cpp  PathNormalizer.hpp
source/Engine/Formats/: Art.cpp  Art.hpp  DataFile.cpp  DataFile.hpp
source/Engine/Graphics/: Canvas.cpp  Canvas.hpp  Image.cpp  Image.hpp  Point.cpp  Point.hpp  Sprite.cpp  Sprite.hpp
source/Engine/Loaders/: ArtLoader.cpp  ArtLoader.hpp  DatLoader.cpp  DatLoader.hpp  FileLoader.cpp  FileLoader.hpp
source/Engine/Managers/: FileManager.cpp  FileManager.hpp  SpriteManager.cpp  SpriteManager.hpp
source/Engine/Math/: Isometric.cpp  Isometric.hpp  Point.cpp  Point.hpp
source/Engine/Readers/: DatReader.cpp  DatReader.hpp  FileReader.cpp  FileReader.hpp
source/Engine/UI/: MainMenu.cpp  MainMenu.hpp
source/Engine/Widgets/: Button.cpp  Button.hpp  Container.cpp  Container.hpp  Form.cpp  Form.hpp  Widget.cpp  Widget.hpp
